<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="15dp">
        <ImageView
            android:id="@+id/start_imageView"
            android:layout_width="280dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/grey_light_light"
            android:background="@drawable/pubg_logo" />
        <LinearLayout
            android:id="@+id/statistics_block_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:background="@drawable/background_bar">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/statistics_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="ABOUT"
                    android:layout_toRightOf="@id/statistics_image"
                    android:textColor="@color/grey_light_light"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/statistics_image"
                    android:layout_centerVertical="true"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_question"
                    app:tint="@color/grey_light_light" />
            </RelativeLayout>
            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:textColorLink="@color/green_light"
                android:autoLink="none"
                android:textStyle="normal"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/grey_light_light"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/statistics_block_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:background="@drawable/background_bar">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/statistics_data_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="LEGAL NOTICE"
                    android:layout_toRightOf="@id/statistics_image_2"
                    android:textColor="@color/grey_light_light"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/statistics_image_2"
                    android:layout_centerVertical="true"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_question"
                    app:tint="@color/grey_light_light" />
            </RelativeLayout>
            <TextView
                android:id="@+id/about_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text_2"
                android:textStyle="normal"
                android:fontFamily="sans-serif-medium"
                android:textColorLink="@color/green_light"
                android:autoLink="none"
                android:textColor="@color/grey_light_light"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/statistics_block_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:background="@drawable/background_bar">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/statistics_data_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="ADDITIONAL"
                    android:layout_toRightOf="@id/statistics_image_3"
                    android:textColor="@color/grey_light_light"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/statistics_image_3"
                    android:layout_centerVertical="true"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_question"
                    app:tint="@color/grey_light_light" />
            </RelativeLayout>
            <TextView
                android:id="@+id/about_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text_3"
                android:textStyle="normal"
                android:fontFamily="sans-serif-medium"
                android:textColorLink="@color/green_light"
                android:autoLink="none"
                android:textColor="@color/grey_light_light"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>